--- a/ru/about.html
+++ b/ru/about.html
@@ -121,7 +121,7 @@
         <div class="pillars-other">
             <div class="container" style="background-color: var(--back-green-a1-700); color: var(--back-green-a1-100);">
                 <div class="inactive-container">
-                    <h2  style="color: var(--back-green-a1-200);">Infinix Note 12 2023(SM-A536E)</h2>
+                    <h2  style="color: var(--back-green-a1-200);">Infinix Note 12 2023</h2>
                     <table>
                         <tr>
                             <td class="table-form-left-top" style="background-color: var(--back-green-a1-800);">Процессор</td><td class="table-form-right-top" style="background-color: var(--back-green-a1-800);">Helio G99(2400 МГц)</td>
