--- a/ru/index.html
+++ b/ru/index.html
@@ -65,7 +65,7 @@
                     <a href="about.html"><button>Перейти в "О проекте"</button></a>
                 </div>
             </div>
-            <div class="container-with-link" onclick="document.location='friends.html'">
+            <div class="container-with-link" onclick="document.location='ru/friends.html'">
                 <div class="inactive-container">
                     <h2>Друзья</h2>
                     <p>Здесь ты можешь найти моих друзей!</p>
