--- a/ru/about.html
+++ b/ru/about.html
@@ -97,7 +97,7 @@
                             <td class="table-form-left-top">Виртуальная машина</td><td class="table-form-right-top">VMware Workstation 16</td>
                         </tr>
                         <tr>
-                            <td class="table-form">Видеоредактор</td><td class="table-form">NCH Videopad 8</td>
+                            <td class="table-form">Видеоредактор</td><td class="table-form">Wondershare Filmora 10</td>
                         </tr>
                         <tr>
                             <td class="table-form">Запись экрана</td><td class="table-form">oCam Portable</td>
