--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 	<title></title>
 </head>
 <body>
+	<link rel="icon" href="assets/favicon.ico" type="image/x-icon">
 	<head>
 <meta http-equiv="refresh" content="0;URL=ru/index.html" />
 </head>
