--- a/ru/index.html
+++ b/ru/index.html
@@ -16,6 +16,7 @@
         @import url('https://fonts.cdnfonts.com/css/google-sans');
     </style>
     <title>Главная страница</title>
+    <link rel="icon" href="assets/favicon.ico" type="image/x-icon">
 </head>
 <body class="body_hide">
     <button class="switch" onclick="document.location='../index.html'" id="lang"><span class="material-symbols-rounded">public</span></button>
