--- a/ru/about.html
+++ b/ru/about.html
@@ -97,7 +97,7 @@
                             <td class="table-form-left-top">Виртуальная машина</td><td class="table-form-right-top">VMware Workstation 16</td>
                         </tr>
                         <tr>
-                            <td class="table-form">Видеоредактор</td><td class="table-form">Wondershare Filmora 10</td>
+                            <td class="table-form">Видеоредактор</td><td class="table-form">NCH Videopad 8</td>
                         </tr>
                         <tr>
                             <td class="table-form">Запись экрана</td><td class="table-form">oCam Portable</td>
@@ -121,7 +121,7 @@
         <div class="pillars-other">
             <div class="container" style="background-color: var(--back-green-a1-700); color: var(--back-green-a1-100);">
                 <div class="inactive-container">
-                    <h2  style="color: var(--back-green-a1-200);">Infinix Note 12 2023</h2>
+                    <h2  style="color: var(--back-green-a1-200);">Infinix Note 12 2023(SM-A536E)</h2>
                     <table>
                         <tr>
                             <td class="table-form-left-top" style="background-color: var(--back-green-a1-800);">Процессор</td><td class="table-form-right-top" style="background-color: var(--back-green-a1-800);">Helio G99(2400 МГц)</td>
@@ -314,42 +314,7 @@
                     </table>
                 </div>
             </div>
-                               <div class="container" style="background-color: var(--back-red-a1-700); color: var(--back-red-a1-100);">
-                <div class="inactive-container">
-                    <h2 style="color: var(--back-red-a1-200);">-</h2>
-                    <table>
-                        <tr>
-                            <td class="table-form-left-top" style="background-color: var(--back-red-a1-800);">Процессор</td><td class="table-form-right-top" style="background-color: var(--back-red-a1-800);">-</td>
-                        </tr>
-                        <tr>
-                            <td class="table-form" style="background-color: var(--back-red-a1-800);">Графическое устройство</td><td class="table-form" style="background-color: var(--back-red-a1-800);">-</td>
-                        </tr>
-                        <tr>
-                            <td class="table-form" style="background-color: var(--back-red-a1-800);">Экран</td><td class="table-form" style="background-color: var(--back-red-a1-800);">-</td>
-                        </tr>
-                        <tr>
-                            <td class="table-form" style="background-color: var(--back-red-a1-800);">Хранилище</td><td class="table-form" style="background-color: var(--back-red-a1-800);">-</td>
-                        </tr>
-                        <tr>
-                            <td class="table-form" style="background-color: var(--back-red-a1-800);">Оперативная память</td><td class="table-form" style="background-color: var(--back-red-a1-800);">-</td>
-                        </tr>
-                        <tr>
-                            <td class="table-form" style="background-color: var(--back-red-a1-800);">Аккумулятор</td><td class="table-form" style="background-color: var(--back-red-a1-800);">-</td>
-                        </tr>
-                        <tr>
-                            <th rowspan="2" class="table-form" style="background-color: var(--back-red-a1-800);">Камера
-                                <td class="table-form" style="background-color: var(--back-red-a1-800);">-</td>
-                            </th>
-                        </tr>
-                        <tr>
-                            <td class="table-form" style="background-color: var(--back-red-a1-800);">-</td>
-                        </tr>
-                        <tr>
-                            <td class="table-form" style="background-color: var(--back-red-a1-800);">Оболочка</td><td class="table-form" style="background-color: var(--back-red-a1-800);">-</td>
-                        </tr>
-                        <tr>
-                            <td class="table-form-left-bottom" style="background-color: var(--back-red-a1-800);">Состояние</td><td class="table-form-right-bottom" style="background-color: var(--back-red-a1-800);"><span style="color: var(--back-red-a1-50)">-</span></td>
-                        </tr>
+                            <iframe height="91px" width="280px" frameborder="0" src="https://socialcounts.org/youtube-live-subscriber-count/UCHXRmpN6rdBwZFYLvdixEuw/embed" allowFullScreen></iframe>
                     </table>
                 </div>
             </div>
