--- a/ru/changelog.html
+++ b/ru/changelog.html
@@ -69,6 +69,15 @@
                     </ol>
                 </div>
             </div>
+            <div class="container" style="background-color: var(--back-blue-color-a3-700); color: var(--back-blue-color-a3-100);">
+                <div class="inactive-container">
+                    <h2 style="color: var(--back-blue-color-a3-200);">Изменения 10.06.2023</h2>
+                    <ol>
+                        <li>Изменил код сайта</li>
+                        <li>Добавил счетчик подписчиков на вкладке инфо</li>
+                    </ol>
+                </div>
+            </div>
             <div class="container" style="background-color: var(--back-blue-color-n1-700); color: var(--back-blue-color-n1-100);">
                 <div class="inactive-container">
                     <h2 style="color: var(--back-blue-color-n1-200);">Изменение 28.03.2023</h2>
