New versionindex.html

--- a/ru/index.html
+++ b/ru/index.html
@@ -104,7 +104,7 @@
             <script src="../assets/js/all_in_one_ru.js"></script>
         </div>
         <div class="footer-section-link">
-            <h3>Ссылка на сайт автора у которого я его забрал (вежливо попросил)</h3>
+            <h3>Ссылка на сайт автора у которого я его забрал (вежливо попросил) UwU</h3>
             <input type="text" value='https://ost-sys.github.io' id="myInput">
             <br>
             <div class="button-footer-pillars">
