--- a/ru/index.html
+++ b/ru/index.html
@@ -43,7 +43,7 @@
         <h1 id="page-title">Приветствую!</h1>
         <h3>Добро пожаловать на мой веб-сайт! Здесь можно найти много интересного и полезного для ПК или телефона! Надеюсь ты найдёшь то, что тебе нужно!</h3>
         <center>
-            <iframe width="560" height="315" src="https://www.youtube.com/embed/l72wWBPZLok" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/bpPDsnYFPLQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
         </center>
         <div class="pillars">
             <div class="container-with-link" onclick="document.location='soft.html'">
