--- a/ru/rickroll.html
+++ b/ru/rickroll.html
@@ -1,1 +1,10 @@
-<iframe width="560" height="315" src="https://www.youtube.com/embed/dQw4w9WgXcQ?si=N399bIdsKi_SitwH" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+<!doctype html>
+<html>
+  <head>
+    <meta charset="utf-8" />
+    <title>РФРФРРФРФРФРФР</title>
+  </head>
+  <body>
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/dQw4w9WgXcQ?si=N399bIdsKi_SitwH" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+  </body>
+</html>
