--- a/ru/rickroll.html
+++ b/ru/rickroll.html
@@ -2,9 +2,9 @@
 <html>
   <head>
     <meta charset="utf-8" />
-    <title>РФРФРРФРФРФРФР</title>
+    <title>рапраппапапрарп</title>
   </head>
   <body>
-    <iframe width="1080" height="2400" src="https://www.youtube.com/embed/dQw4w9WgXcQ?si=N399bIdsKi_SitwH" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+    <iframe width="1366" height="768" src="https://www.youtube.com/embed/dQw4w9WgXcQ?si=N399bIdsKi_SitwH" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
   </body>
 </html>
