--- a/ru/index.html
+++ b/ru/index.html
@@ -80,7 +80,7 @@
         <div class="separator"></div>
         <div class="friends">
             <h2>Мои друзья:</h2>
-            <center> <h4 style="padding: 0px;">1 друг Саня<a href="https://t.me/+aaPXgvT7H-IxNDAy" class="link"> Telegram Друга</a></h4> </center>
+            <center> <h4 style="padding: 0px;">Пока некого не могу оставить)<a
             <!-- <a href="https://nerok.ml">
                 <img src="../assets/image/nerok_banner.png" class="friends-link" alt="Nerok"/>
             </a>
